# tensorflow-keras-api-sample

./: README.md  functional.py  pyproject.toml  sequential.py  subclassing.py
