[tool.poetry]
name = "tensorflow-model"
version = "0.1.0"
description = ""
authors = ["pjt3591oo <pjt3591oo@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10"
tensorflow = "^2.8.0"
numpy = "^1.22.3"
pydot = "^1.4.2"
graphviz = "^0.19.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
